# ChangeLog for dev-java/maven-bin
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/maven-bin/ChangeLog,v 1.57 2009/05/12 19:33:02 ali_bush Exp $

  06 Dec 2009; Alistair Bush <ali_bush@gentoo.org>
  maven-bin-3.0_alpha5.ebuild:
  maven-bin is 1.5 compatible not 1.4

  02 Dec 2009; Jesse Farinacci <jieryn@gmail.com> -maven-bin-2.2.1.ebuild,
  maven-bin-3.0_alpha5.ebuild:
  fixing an $S problem, also removing 2.2.1 as that is in the proper tree

*maven-bin-3.0_alpha5 (02 Dec 2009)

  02 Dec 2009; Jesse Farinacci <jieryn@gmail.com>
  -maven-bin-3.0_alpha4.ebuild, +maven-bin-3.0_alpha5.ebuild:
  maven team pushed another alpha release to fix many bugs

*maven-bin-3.0_alpha4 (17 Nov 2009)

  17 Nov 2009; Jesse Farinacci <jieryn@gmail.com>
  -maven-bin-3.0_alpha3.ebuild, +maven-bin-3.0_alpha4.ebuild:
  maven team pushed a new alpha release to fix a couple of critical bugs

*maven-bin-3.0_alpha3 (15 Nov 2009)

  15 Nov 2009; Jesse Farinacci <jieryn@gmail.com>
  +maven-bin-3.0_alpha3.ebuild:
  adding 3.0-alpha-3.. please test! maven 3.0 will make a huge impact

*maven-bin-2.2.1 (11 Sep 2009)

  11 Sep 2009; Jesse Farinacci <jieryn@gmail.com> -maven-bin-2.2.0.ebuild,
  +maven-bin-2.2.1.ebuild:
  version bump to 2.2.1

*maven-bin-2.2.0 (16 Jul 2009)

  16 Jul 2009; Jesse Farinacci <jieryn@gmail.com> +maven-bin-2.2.0.ebuild,
  +files/maven, +metadata.xml:
  adding maven-2.2.0 support

*maven-bin-2.1.0 (12 May 2009)
*maven-bin-2.0.10-r1 (12 May 2009)

  12 May 2009; Alistair Bush <ali_bush@gentoo.org>
  +maven-bin-2.0.10-r1.ebuild, +maven-bin-2.1.0.ebuild:
  Add support for eselect-maven. Required as mvn have made possible
  incompatiable changes to 2.1.

  27 Apr 2009; Brent Baude <ranger@gentoo.org> maven-bin-2.0.10.ebuild:
  Marking maven-bin-2.0.10 ppc for bug 265108

  18 Apr 2009; Markus Meier <maekke@gentoo.org> maven-bin-2.0.10:
  amd64/x86 stable, bug #265018

*maven-bin-2.0.10 (04 Mar 2009)
