@@ -1,6 +1,14 @@
 # ChangeLog for dev-java/maven-bin
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-java/maven-bin/ChangeLog,v 1.57 2009/05/12 19:33:02 ali_bush Exp $
+
+*maven-bin-3.0_alpha6 (11 Jan 2010)
+
+  11 Jan 2010; Jesse Farinacci <jieryn@gmail.com>
+  -maven-bin-3.0_alpha5.ebuild, +maven-bin-3.0_alpha6.ebuild:
+  version bump, please see
+  http://old.nabble.com/-ANN--Apache-Maven-3.0-alpha-6-Released-td27099189.h
+  tml
 
   06 Dec 2009; Alistair Bush <ali_bush@gentoo.org>
   maven-bin-3.0_alpha5.ebuild:
